[tool.poetry]
name = "glcm_cupy"
version = "0.1.0"
description = "Binned GLCM 5 Features implemented in CuPy"
authors = ["Evening"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = ">=3.8"
scikit-image = "~=0.18.3"

[tool.poetry.dev-dependencies]
scikit-image = "~=0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
