[tool.poetry]
name = "glcm_cupy"
version = "0.1.4"
description = "Binned GLCM 5 Features implemented in CuPy"
authors = ["Evening"]
license = "MIT"
homepage = "https://github.com/Eve-ning/glcmbin5_cupy"
repository = "https://github.com/Eve-ning/glcmbin5_cupy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3.8"
]
readme="README.md"
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.8"
scikit-image = "~=0.18.3"
tqdm = "~=4.63.0"

[tool.poetry.dev-dependencies]
scikit-image = "~=0.18.3"
tqdm = "~=4.63.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
