[tool.poetry]
name = "glcm_cupy"
version = "0.2.1"
description = "Binned GLCM 5 Features implemented in CuPy"
authors = ["Evening"]
license = "MIT"
homepage = "https://github.com/Eve-ning/glcmbin5_cupy"
repository = "https://github.com/Eve-ning/glcmbin5_cupy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme="README.md"
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.9"
scikit-image = "^0.22.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
cupy-cuda12x = "^12.2.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
