[metadata]
name = glcmbin5_cupy
version = 0.0.1
author = Eve-ning
author_email = dev_evening@hotmail.com
description = Binned GLCM 5 Features on CuPy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eve-ning/glcmbin5
project_urls =
    Bug Tracker = https://github.com/Eve-ning/glcmbin5/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src