[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eve-ning
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
